<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:background="@android:color/white"
    android:orientation="vertical">

    <!-- agency name -->

    <TextView
        android:id="@+id/textview_agencyinfo_agencyName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="Eden Certified Real Estate Agency" />
    <!--TODO: auto text-resize-->

    <!-- favorite button -->

    <!-- address -->
    <LinearLayout
        android:id="@+id/linearlaout_agencyinfo_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:background="@drawable/agencyinfo_btn_border"
        android:layout_gravity="end"
        android:orientation="horizontal"
        android:layout_marginRight="10dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/agencyinfo_favorite_star"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/agencyinfo_star_off" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:paddingRight="10dp"
            android:text="@string/agencyinfo_addtofavorites"
            android:textColor="@android:color/black"
            android:textSize="15dp"
            />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/agencyinfo_mapmarker" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="@string/agencyinfo_address"
                    android:textSize="15dp" />

            </LinearLayout>

            <!-- Address detail -->
            <TextView
                android:id="@+id/textview_agencyinfo_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:textColor="@android:color/black" />

            <!--TODO: implement map -->
            <!-- map -->

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/agencyinfo_map"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="40dp"
            android:name="com.google.android.gms.maps.SupportMapFragment" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="Please call the agency before the visit in case of the address is changed."
                android:textColor="@android:color/holo_blue_light" />

            <!-- divider -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:background="@android:color/darker_gray" />


            <!-- 1st row representative_title start-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@drawable/agencyinfo_silhouette" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/agencyinfo_representative"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <!-- 1st row end -->
            <!-- 2nd row representative_content start -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textview_agencyinfo_representative"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="27dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- 2nd row end-->

            <!-- divider -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:background="@android:color/darker_gray" />

            <!--3rd row start-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@drawable/agencyinfo_phone" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/agencyinfo_phone"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@drawable/agencyinfo_fax" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/agencyinfo_fax"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <!-- 3rd row end-->
            <!-- 4th row start -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/textview_agencyinfo_phone1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="27dp"
                        android:autoLink="phone"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textview_agencyinfo_fax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="27dp"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
            <!--4th row end-->

            <!-- 5th row start -->

            <LinearLayout
                android:id="@+id/agencyinfo_second_tel_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:visibility="gone"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textview_agencyinfo_phone2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="27dp"
                        android:autoLink="phone"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="27dp"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
            <!--4th row end-->


            <!--divider-->
            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@drawable/agencyinfo_language" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/agencyinfo_languageAvailable"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal"
                    android:paddingStart="30dp">

                    <ImageView
                        android:id="@+id/imageview_agencyinfo_us"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/language_us" />

                    <ImageView
                        android:id="@+id/imageview_agencyinfo_china"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/language_china" />

                    <ImageView
                        android:id="@+id/imageview_agencyinfo_japan"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/language_japan" />

                    <ImageView
                        android:id="@+id/imageview_agencyinfo_portugal"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginRight="10dp"
                        android:visibility="gone"
                        android:background="@drawable/language_portugal" />

                    <ImageView
                        android:id="@+id/imageview_agencyinfo_russia"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginRight="10dp"
                        android:visibility="gone"
                        android:background="@drawable/language_russia" />

                    <ImageView
                        android:id="@+id/imageview_agencyinfo_spain"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginRight="10dp"
                        android:visibility="gone"
                        android:background="@drawable/language_spain" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>